// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rehypeShikiUU > highlights bash  with twinkleplop 1`] = `
{
  "position": undefined,
  "type": "raw",
  "value": "<pre class="twinkleplop language-bash has-highlight" data-language="bash"><code tabindex="0"><span class="l highlight"><span class="tok builtin">echo</span> <span class="tok identifier">hi</span></span></code></pre>",
}
`;

exports[`rehypeShikiUU > highlights jsx  with twinkleplop 1`] = `
{
  "position": undefined,
  "type": "raw",
  "value": "<pre class="twinkleplop language-jsx" data-language="jsx"><code tabindex="0"><span class="l"><span class="tok keyword">const</span> <span class="tok constant">a</span> <span class="tok operator">=</span> <span class="tok punctuation">&lt;</span><span class="tok tag_name">div</span><span class="tok punctuation">&gt;{</span><span class="tok identifier">b</span><span class="tok punctuation">}&lt;/</span><span class="tok tag_name">div</span><span class="tok punctuation">&gt;;</span></span></code></pre>",
}
`;

exports[`rehypeShikiUU > highlights ts {2} with twinkleplop 1`] = `
{
  "position": undefined,
  "type": "raw",
  "value": "<pre class="twinkleplop language-ts has-highlight" data-language="ts"><code tabindex="0"><span class="l"><span class="tok keyword">const</span> <span class="tok constant">a</span> <span class="tok operator">=</span> <span class="tok number">1</span><span class="tok punctuation">;</span></span>
<span class="l highlight"><span class="tok keyword">const</span> <span class="tok constant">b</span> <span class="tok operator">=</span> <span class="tok number">2</span><span class="tok punctuation">;</span></span></code></pre>",
}
`;

exports[`rehypeShikiUU > highlights typescript  with twinkleplop 1`] = `
{
  "position": undefined,
  "type": "raw",
  "value": "<pre class="twinkleplop language-typescript" data-language="typescript"><code tabindex="0"><span class="l"><span class="tok keyword">const</span> <span class="tok constant">a</span> <span class="tok operator">=</span> <span class="tok number">1</span><span class="tok punctuation">;</span></span>
<span class="l"><span class="tok keyword">const</span> <span class="tok constant">b</span> <span class="tok operator">=</span> <span class="tok number">2</span><span class="tok punctuation">;</span></span></code></pre>",
}
`;
